# nrf51_proj

./: README.md
devboard/bl600-sa-devboard/: bl600-sa-devboard-.kicad_pcb  bl600-sa-devboard-delete.kicad_pcb  bl600-sa-devboard.kicad_pcb  bl600-sa-devboard.sch  bl600-sa.sch  sym-lib-table
devboard/bl600-sa-devboard.rev2/: bl600-sa-devboard.kicad_pcb  bl600-sa-devboard.kicad_pcb-bak
devboard/bl600-sa-devboard.rev2/bl600-sa-devboard/: bl600-sa-devboard-B_Cu.gbr  bl600-sa-devboard-B_Mask.gbr  bl600-sa-devboard-B_Paste.gbr  bl600-sa-devboard-B_SilkS.gbr  bl600-sa-devboard-Edge_Cuts.gbr  bl600-sa-devboard-F_Cu.gbr  bl600-sa-devboard-F_Mask.gbr  bl600-sa-devboard-F_Paste.gbr  bl600-sa-devboard-F_SilkS.gbr  bl600-sa-devboard-GND.gbr  bl600-sa-devboard-NPTH.drl  bl600-sa-devboard-PTH.drl  bl600-sa-devboard-PWR.gbr  bl600-sa-devboard-job.gbrjob
devboard/nrf51822_devboard/: nrf51822.sch  nrf51822.sch-bak  nrf51822_devboard.kicad_pcb  nrf51822_devboard.kicad_pcb-bak  nrf51822_devboard.pro
devboard/nrf51822_devboard.rev2/: nrf51822.sch  nrf51822.sch-bak  nrf51822_devboard-cache.lib  nrf51822_devboard.kicad_pcb  nrf51822_devboard.kicad_pcb-bak  nrf51822_devboard.sch
devboard/nrf51822_devboard.rev2/nrf51822_devboard/: nrf51822_devboard-B_Cu.gbr  nrf51822_devboard-B_Mask.gbr  nrf51822_devboard-B_Paste.gbr  nrf51822_devboard-B_SilkS.gbr  nrf51822_devboard-Edge_Cuts.gbr  nrf51822_devboard-F_Cu.gbr  nrf51822_devboard-F_Mask.gbr  nrf51822_devboard-F_Paste.gbr  nrf51822_devboard-F_SilkS.gbr  nrf51822_devboard-GND.gbr  nrf51822_devboard-NPTH.drl  nrf51822_devboard-PTH.drl  nrf51822_devboard-PWR.gbr  nrf51822_devboard-job.gbrjob
nRF5_SDK_11.0.0_89a8197/components/toolchain/gcc/: Makefile.posix
nRF5_SDK_11.0.0_89a8197/myproject/blinky/: Makefile  Makefile-s130  main.c
nRF5_SDK_11.0.0_89a8197/myproject/blinky_freertos/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad.dev/myproject/ble_app_gls/: nrf51_xxaa_softdevice_gcc.ld  sdk_config.h
nRF5_SDK_12.3.0_d7731ad.dev/myproject/ble_app_hts/: sdk_config.h
nRF5_SDK_12.3.0_d7731ad.dev/myproject/esb_prx/: Makefile
nRF5_SDK_12.3.0_d7731ad.dev/myproject/esb_ptx/: Makefile
nRF5_SDK_12.3.0_d7731ad.dev/myproject/peripheral_test/: main-.c  main-gpiote.c  main.c
nRF5_SDK_12.3.0_d7731ad.dev/myproject/proprietary_rf/esb_low_power_prx/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad.dev/myproject/proprietary_rf/esb_low_power_ptx/: Makefile
nRF5_SDK_12.3.0_d7731ad.dev/myproject/proprietary_rf/esb_prx/: Makefile  uart_init.c
nRF5_SDK_12.3.0_d7731ad.dev/myproject/proprietary_rf/esb_ptx/: Makefile  main.c  uart_init.h
nRF5_SDK_12.3.0_d7731ad/components/toolchain/gcc/: Makefile.posix
nRF5_SDK_12.3.0_d7731ad/myproject/ble_app_beacon/: CMakeLists.txt  Makefile  main.c  nrf51_xxaa_softdevice_gcc.ld  sdk_config.h
nRF5_SDK_12.3.0_d7731ad/myproject/ble_app_gls/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/ble_app_hrs_freertos/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/ble_app_hts/: Makefile  main.c  sdk_config.h
nRF5_SDK_12.3.0_d7731ad/myproject/ble_app_uart/: Makefile  main.c  sdk_config.h
nRF5_SDK_12.3.0_d7731ad/myproject/blinky/: CMakeLists.txt  Makefile  main.c
nRF5_SDK_12.3.0_d7731ad/myproject/blinky-s130/: CMakeLists.txt  Makefile  nrf51_xxaa_softdevice_gcc.ld
nRF5_SDK_12.3.0_d7731ad/myproject/blinky_freertos/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/ds18b20/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad/myproject/esb_prx/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/esb_ptx/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad/myproject/fulltest/: CMakeLists.txt  adc_test.c  adc_test.h  gpio_test.c  gpio_test.h  main.c  sdk_config.h
nRF5_SDK_12.3.0_d7731ad/myproject/hinata/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/peripheral_test/: CMakeLists.txt  Makefile  sdk_config.h
nRF5_SDK_12.3.0_d7731ad/myproject/printf/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad/myproject/proprietary_rf/esb_low_power_prx/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/proprietary_rf/esb_low_power_ptx/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad/myproject/proprietary_rf/esb_low_power_ptx/_build/: nrf51822_xxaa.hex  nrf51822_xxaa.in  nrf51822_xxaa.map  nrf51822_xxaa.out  nrf51822_xxaa_app_error_weak.c.d  nrf51822_xxaa_app_util_platform.c.d  nrf51822_xxaa_boards.c.d  nrf51822_xxaa_gcc_startup_nrf51.S.d  nrf51822_xxaa_main.c.d  nrf51822_xxaa_nrf_assert.c.d  nrf51822_xxaa_nrf_drv_common.c.d  nrf51822_xxaa_nrf_esb.c.d  nrf51822_xxaa_sdk_errors.c.d
nRF5_SDK_12.3.0_d7731ad/myproject/proprietary_rf/esb_prx/: Makefile  main.c
nRF5_SDK_12.3.0_d7731ad/myproject/proprietary_rf/esb_ptx/: Makefile
nRF5_SDK_12.3.0_d7731ad/myproject/proprietary_rf/esb_ptx/_build/: nrf51822_xxaa.hex  nrf51822_xxaa.map  nrf51822_xxaa.out  nrf51822_xxaa_RTT_Syscalls_GCC.c.d  nrf51822_xxaa_SEGGER_RTT.c.d  nrf51822_xxaa_SEGGER_RTT_printf.c.d  nrf51822_xxaa_app_error.c.d  nrf51822_xxaa_main.c.d  nrf51822_xxaa_nrf_drv_uart.c.d  nrf51822_xxaa_nrf_log_backend_serial.c.d  nrf51822_xxaa_nrf_log_frontend.c.d  nrf51822_xxaa_system_nrf51.c.d
nRF5_SDK_12.3.0_d7731ad/myproject/uart/: Makefile  main.c
pio-nrf51-examples/arduino-blink/: platformio.ini
